--- a/DevilHouse/Main.storyboard
+++ b/DevilHouse/Main.storyboard
@@ -815,7 +815,7 @@
                                     <constraint firstAttribute="height" constant="30" id="9fN-Gw-hyN"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="yes" spellCheckingType="yes" keyboardType="namePhonePad" returnKeyType="done"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="namePhonePad" returnKeyType="done"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OWD-r8-HOs">
                                 <rect key="frame" x="22" y="20" width="40" height="20"/>
@@ -1016,10 +1016,13 @@
                                     <action selector="postTwitter:" destination="b8Z-dZ-LBm" eventType="touchUpInside" id="zin-Ox-n6B"/>
                                 </connections>
                             </button>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="waku1.png" translatesAutoresizingMaskIntoConstraints="NO" id="zCp-a7-9xU">
+                                <rect key="frame" x="140" y="354" width="320" height="50"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GAME OVER" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Cc-i6-qAo">
                                 <rect key="frame" x="222" y="40" width="156" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                <color key="textColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="1" green="0.23027178470000001" blue="0.1134363323" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="階層" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJG-r6-oa5">
@@ -1035,18 +1038,21 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TSd-Oe-Fy2">
-                                <rect key="frame" x="248" y="274" width="104" height="44"/>
+                                <rect key="frame" x="210" y="274" width="180" height="60"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="180" id="oAQ-RO-hpU"/>
+                                    <constraint firstAttribute="height" constant="60" id="oP5-vn-J4T"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
-                                <state key="normal" title="街に戻る">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
+                                <state key="normal" title="街に戻る"/>
                                 <connections>
                                     <segue destination="qrt-df-8Kx" kind="presentation" id="QeH-ZW-iUe"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3mo-EL-4Ho">
-                                <rect key="frame" x="277" y="338" width="47" height="23"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <rect key="frame" x="271" y="364" width="59" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -1055,12 +1061,14 @@
                         <constraints>
                             <constraint firstItem="TSd-Oe-Fy2" firstAttribute="top" secondItem="8Cc-i6-qAo" secondAttribute="bottom" constant="200" id="3aM-ft-me3"/>
                             <constraint firstAttribute="bottomMargin" secondItem="gVO-5t-aa9" secondAttribute="bottom" constant="5" id="BHX-z8-pEH"/>
-                            <constraint firstItem="3mo-EL-4Ho" firstAttribute="top" secondItem="TSd-Oe-Fy2" secondAttribute="bottom" constant="20" id="Hzf-sC-Afw"/>
+                            <constraint firstItem="3mo-EL-4Ho" firstAttribute="top" secondItem="TSd-Oe-Fy2" secondAttribute="bottom" constant="30" id="Hzf-sC-Afw"/>
                             <constraint firstAttribute="trailingMargin" secondItem="gVO-5t-aa9" secondAttribute="trailing" constant="20" id="IvT-HS-fVl"/>
                             <constraint firstAttribute="trailingMargin" secondItem="5nT-as-9gN" secondAttribute="trailing" constant="30" id="JKn-uW-dQ2"/>
                             <constraint firstItem="5nT-as-9gN" firstAttribute="top" secondItem="Nv3-Hd-JYR" secondAttribute="topMargin" constant="100" id="RPK-JT-TNS"/>
+                            <constraint firstItem="zCp-a7-9xU" firstAttribute="centerX" secondItem="Nv3-Hd-JYR" secondAttribute="centerX" id="TjS-Q1-o0a"/>
                             <constraint firstItem="8Cc-i6-qAo" firstAttribute="centerX" secondItem="Nv3-Hd-JYR" secondAttribute="centerX" id="We7-r7-vXx"/>
                             <constraint firstItem="3mo-EL-4Ho" firstAttribute="centerX" secondItem="Nv3-Hd-JYR" secondAttribute="centerX" id="bHU-ai-zpZ"/>
+                            <constraint firstItem="zCp-a7-9xU" firstAttribute="top" secondItem="TSd-Oe-Fy2" secondAttribute="bottom" constant="20" id="hTZ-HD-j9Q"/>
                             <constraint firstItem="PJG-r6-oa5" firstAttribute="top" secondItem="Nv3-Hd-JYR" secondAttribute="topMargin" constant="100" id="kQh-a8-Vlf"/>
                             <constraint firstItem="TSd-Oe-Fy2" firstAttribute="centerX" secondItem="Nv3-Hd-JYR" secondAttribute="centerX" id="kfl-2J-uGa"/>
                             <constraint firstItem="PJG-r6-oa5" firstAttribute="leading" secondItem="Nv3-Hd-JYR" secondAttribute="leadingMargin" constant="30" id="q6r-I9-mIC"/>
@@ -1094,6 +1102,9 @@
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="haikei.png" translatesAutoresizingMaskIntoConstraints="NO" id="YXd-dQ-YuH">
                                 <rect key="frame" x="93" y="-68" width="414" height="736"/>
                             </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="waku1.png" translatesAutoresizingMaskIntoConstraints="NO" id="zB0-sm-ka9">
+                                <rect key="frame" x="140" y="354" width="320" height="50"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZG5-5e-8ax">
                                 <rect key="frame" x="510" y="545" width="50" height="50"/>
                                 <constraints>
@@ -1108,7 +1119,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GAME CLEAR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hv2-v7-0ak">
                                 <rect key="frame" x="215" y="40" width="171" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                <color key="textColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="1" green="0.23027178470000001" blue="0.1134363323" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイム" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nFB-uU-m4w">
@@ -1124,18 +1135,21 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xL5-TK-4co">
-                                <rect key="frame" x="244" y="274" width="112" height="46"/>
+                                <rect key="frame" x="210" y="274" width="180" height="60"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="91c-GR-rAu"/>
+                                    <constraint firstAttribute="width" constant="180" id="Xwt-T3-mr2"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                <state key="normal" title="街に戻る">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
+                                <state key="normal" title="街に戻る"/>
                                 <connections>
                                     <segue destination="qrt-df-8Kx" kind="presentation" id="Mk6-ym-Ixj"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ys5-G5-CCA">
-                                <rect key="frame" x="279" y="340" width="170" height="24"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ys5-G5-CCA">
+                                <rect key="frame" x="276" y="364" width="49" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -1152,10 +1166,12 @@
                             <constraint firstItem="nFB-uU-m4w" firstAttribute="top" secondItem="uaV-gi-Quh" secondAttribute="bottom" constant="100" id="Xoc-kx-vMZ"/>
                             <constraint firstItem="UVR-Rh-V8w" firstAttribute="leading" secondItem="x5n-62-qY5" secondAttribute="leadingMargin" constant="30" id="gqV-rO-UkI"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ZG5-5e-8ax" secondAttribute="trailing" constant="20" id="h5D-M7-yWT"/>
+                            <constraint firstItem="zB0-sm-ka9" firstAttribute="top" secondItem="xL5-TK-4co" secondAttribute="bottom" constant="20" id="jks-1D-dRt"/>
                             <constraint firstAttribute="trailingMargin" secondItem="nFB-uU-m4w" secondAttribute="trailing" constant="30" id="myS-TZ-XU9"/>
+                            <constraint firstItem="zB0-sm-ka9" firstAttribute="centerX" secondItem="x5n-62-qY5" secondAttribute="centerX" id="rJR-VA-thC"/>
                             <constraint firstItem="hv2-v7-0ak" firstAttribute="centerX" secondItem="x5n-62-qY5" secondAttribute="centerX" id="uKf-WL-ZwQ"/>
                             <constraint firstItem="xL5-TK-4co" firstAttribute="centerX" secondItem="x5n-62-qY5" secondAttribute="centerX" id="uRt-Ie-4TQ"/>
-                            <constraint firstItem="Ys5-G5-CCA" firstAttribute="top" secondItem="xL5-TK-4co" secondAttribute="bottom" constant="20" id="w92-F6-ZCz"/>
+                            <constraint firstItem="Ys5-G5-CCA" firstAttribute="top" secondItem="xL5-TK-4co" secondAttribute="bottom" constant="30" id="w92-F6-ZCz"/>
                         </constraints>
                     </view>
                     <connections>
